# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.139 2005/01/05 20:18:05 wolf31o2 Exp $

  05 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh, targets/stage1/stage1.sh:
  Updated livecdfs-update.sh to modify inittab to use bashlogin. Updated
  targets/stage1/stage1.sh to no longer clean /var/db/pkg, which should fix
  the brokenness of a stage1 tarball.

  04 Jan 2005; John Davis <zhen@gentoo.org> catalyst:
  patch for pvdabeel@gentoo.org. -f and -C can now be used together on the
  cmdline

  04 Jan 2005; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
  modules/livecd_stage2_target.py:
  fix for #76530

  04 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/isolinux-2.08-cdtar.tar.bz2,
  -livecd/cdtar/isolinux-2.08-memtest86+-cdtar.tar.bz2,
  -livecd/cdtar/isolinux-2.08-memtest86-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-2.11-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-2.11-memtest86+-cdtar.tar.bz2:
  Upgraded the isolinux cdtar files and closing bug #70518.

  04 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/netboot.py,
  modules/stage1_target.py, modules/tinderbox_target.py:
  Added patches from Eric Edgar <e_edgar@hotmail.com> from bug #70663 to
  separate out specific target logic from the generic targets modules.

  03 Jan 2005; John Davis <zhen@gentoo.org> arch/ppc.py:
  new PPC arch file from pvdabeel@gentoo.org

  01 Jan 2005; John Davis <zhen@gentoo.org> catalyst,
  examples/generic_stage_template.spec, modules/catalyst_support.py:
  tweaking error handling in the main catalyst script
  updated the example to include a blurb about portage_confdir

  29 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>