@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage2_target.py,v 1.28 2005/01/04 23:54:59 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage2_target.py,v 1.29 2005/01/10 01:05:59 zhen Exp $
 
 """
 Builder class for a LiveCD stage2 build.
@@ -73,7 +73,7 @@ class livecd_stage2_target(generic_stage_target):
 		if self.settings.has_key("portage_confdir"):
 			print "Configuring /etc/portage..."
 			cmd("rm -rf "+self.settings["chroot_path"]+"/etc/portage","Error zapping /etc/portage")
-			cmd("cp -R "+self.settings["portage_confdir"]+" "+self.settings["chroot_path"]+\
+			cmd("cp -R "+self.settings["portage_confdir"]+"/ "+self.settings["chroot_path"]+\
 				"/etc/portage","Error copying /etc/portage")
 
 		for x in self.mounts: 
